Adding small line of information

--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -37,6 +37,7 @@
 							<button class="btn btn-default" data-ng-click="crudCtrl.clearAll()">Clear All</button>
 						</div>
 					</form>
+                    <p class="info-small"><span>HINT:</span> Single click for labels, double click to CRUD</p>
 				</div>
 			</section>
 		</div>
