--- a/css/style.css
+++ b/css/style.css
@@ -63,34 +63,45 @@ p {
   line-height: 1.28571em;
 }
 
+/* line 62, ../sass/style.scss */
+p.info-small {
+  padding-top: 20px;
+  font-size: 14px;
+  text-align: center;
+}
+/* line 66, ../sass/style.scss */
+p.info-small span {
+  font-weight: bold;
+}
+
 @media only screen and (max-width: 767px) {
-  /* line 62, ../sass/style.scss */
+  /* line 71, ../sass/style.scss */
   form {
     font-size: 10px;
   }
 }
-/* line 67, ../sass/style.scss */
+/* line 76, ../sass/style.scss */
 form .form-group .form-control {
   border: 1px solid #000;
   -moz-border-radius: 0 / 0;
   -webkit-border-radius: 0 0;
   border-radius: 0 / 0;
 }
-/* line 72, ../sass/style.scss */
+/* line 81, ../sass/style.scss */
 form label {
   font-weight: normal;
 }
-/* line 75, ../sass/style.scss */
+/* line 84, ../sass/style.scss */
 form .dropdown-menu {
   width: 50%;
 }
-/* line 78, ../sass/style.scss */
+/* line 87, ../sass/style.scss */
 form .color-inset {
   position: relative;
   display: inline-block;
   width: 100%;
 }
-/* line 83, ../sass/style.scss */
+/* line 92, ../sass/style.scss */
 form .color-inset > button {
   width: 32px;
   height: 32px;
@@ -99,17 +110,17 @@ form .color-inset > button {
   top: 1px;
   right: 1px;
 }
-/* line 91, ../sass/style.scss */
+/* line 100, ../sass/style.scss */
 form .color-inset > input {
   padding-right: 40px;
 }
-/* line 94, ../sass/style.scss */
+/* line 103, ../sass/style.scss */
 form .color-pick {
   -moz-border-radius: 16px / 16px;
   -webkit-border-radius: 16px 16px;
   border-radius: 16px / 16px;
 }
-/* line 97, ../sass/style.scss */
+/* line 106, ../sass/style.scss */
 form .rating {
   vertical-align: middle;
   text-align: center;
@@ -117,28 +128,28 @@ form .rating {
   color: #F9690E;
 }
 @media only screen and (max-width: 767px) {
-  /* line 97, ../sass/style.scss */
+  /* line 106, ../sass/style.scss */
   form .rating {
     font-size: 20px;
   }
 }
 
-/* line 108, ../sass/style.scss */
+/* line 117, ../sass/style.scss */
 .btn {
   background-color: #ddd;
 }
 
-/* line 112, ../sass/style.scss */
+/* line 121, ../sass/style.scss */
 .center {
   text-align: center;
 }
 
-/* line 116, ../sass/style.scss */
+/* line 125, ../sass/style.scss */
 .pointer {
   cursor: pointer;
 }
 
-/* line 120, ../sass/style.scss */
+/* line 129, ../sass/style.scss */
 .opener {
   position: absolute;
   right: 40px;
@@ -150,14 +161,14 @@ form .rating {
   z-index: 107;
 }
 @media only screen and (min-width: 768px) and (max-width: 1169px) {
-  /* line 120, ../sass/style.scss */
+  /* line 129, ../sass/style.scss */
   .opener {
     right: 20px;
     top: 20px;
   }
 }
 @media only screen and (max-width: 767px) {
-  /* line 120, ../sass/style.scss */
+  /* line 129, ../sass/style.scss */
   .opener {
     right: 5px;
     top: 7px;
@@ -165,7 +176,7 @@ form .rating {
   }
 }
 
-/* line 140, ../sass/style.scss */
+/* line 149, ../sass/style.scss */
 .closer {
   position: absolute;
   right: 10px;
@@ -176,7 +187,7 @@ form .rating {
   color: #000;
 }
 @media only screen and (max-width: 767px) {
-  /* line 140, ../sass/style.scss */
+  /* line 149, ../sass/style.scss */
   .closer {
     right: 5px;
     top: 8px;
@@ -184,7 +195,7 @@ form .rating {
   }
 }
 
-/* line 155, ../sass/style.scss */
+/* line 164, ../sass/style.scss */
 .toggle-panel {
   position: absolute;
   top: 0;
@@ -197,20 +208,20 @@ form .rating {
   color: #000;
   padding: 20px 40px;
 }
-/* line 166, ../sass/style.scss */
+/* line 175, ../sass/style.scss */
 .toggle-panel.ng-hide {
   top: -500px;
 }
-/* line 169, ../sass/style.scss */
+/* line 178, ../sass/style.scss */
 .toggle-panel.ng-hide-add {
   transition: top linear 500ms;
 }
-/* line 172, ../sass/style.scss */
+/* line 181, ../sass/style.scss */
 .toggle-panel.ng-hide-remove {
   transition: top linear 500ms;
 }
 @media only screen and (max-width: 767px) {
-  /* line 155, ../sass/style.scss */
+  /* line 164, ../sass/style.scss */
   .toggle-panel {
     margin: 0;
     width: 100%;
@@ -218,7 +229,7 @@ form .rating {
   }
 }
 
-/* line 182, ../sass/style.scss */
+/* line 191, ../sass/style.scss */
 #visual {
   background-color: #000;
   width: 85%;
@@ -227,7 +238,7 @@ form .rating {
   margin: 40px 0 30px 0;
 }
 @media only screen and (min-width: 768px) and (max-width: 1169px) {
-  /* line 182, ../sass/style.scss */
+  /* line 191, ../sass/style.scss */
   #visual {
     width: 95%;
     height: 100%;
@@ -235,7 +246,7 @@ form .rating {
   }
 }
 @media only screen and (max-width: 767px) {
-  /* line 182, ../sass/style.scss */
+  /* line 191, ../sass/style.scss */
   #visual {
     width: 100%;
     height: 100%;
@@ -243,80 +254,80 @@ form .rating {
     padding-top: 60px;
   }
 }
-/* line 199, ../sass/style.scss */
+/* line 208, ../sass/style.scss */
 #visual .node-label {
   opacity: 0;
   fill: #fff;
   font-size: 10px;
 }
 @media only screen and (max-width: 767px) {
-  /* line 199, ../sass/style.scss */
+  /* line 208, ../sass/style.scss */
   #visual .node-label {
     font-size: 9px;
   }
 }
 
-/* line 209, ../sass/style.scss */
+/* line 218, ../sass/style.scss */
 #controls {
   width: 98%;
   position: absolute;
   z-index: 104;
 }
 @media only screen and (max-width: 767px) {
-  /* line 209, ../sass/style.scss */
+  /* line 218, ../sass/style.scss */
   #controls {
     top: -15px;
     left: 0;
   }
 }
-/* line 217, ../sass/style.scss */
+/* line 226, ../sass/style.scss */
 #controls select {
   padding: 5px;
   margin: 10px 0 10px 20px;
   color: #000;
 }
 @media only screen and (max-width: 767px) {
-  /* line 217, ../sass/style.scss */
+  /* line 226, ../sass/style.scss */
   #controls select {
     padding: 2px;
     margin: 5px 0 5px 15px;
   }
 }
-/* line 226, ../sass/style.scss */
+/* line 235, ../sass/style.scss */
 #controls .color-legend {
   position: absolute;
   color: #fff;
 }
 @media only screen and (max-width: 767px) {
-  /* line 226, ../sass/style.scss */
+  /* line 235, ../sass/style.scss */
   #controls .color-legend {
     padding-top: 10px;
   }
 }
-/* line 232, ../sass/style.scss */
+/* line 241, ../sass/style.scss */
 #controls .color-legend ul {
   padding-left: 20px;
 }
 @media only screen and (max-width: 767px) {
-  /* line 232, ../sass/style.scss */
+  /* line 241, ../sass/style.scss */
   #controls .color-legend ul {
     padding-left: 10px;
     line-height: 1.2;
   }
 }
-/* line 239, ../sass/style.scss */
+/* line 248, ../sass/style.scss */
 #controls .color-legend li {
   list-style-type: none;
   margin-top: 3px;
 }
 @media only screen and (max-width: 767px) {
-  /* line 239, ../sass/style.scss */
+  /* line 248, ../sass/style.scss */
   #controls .color-legend li {
     display: inline;
     padding-left: 8px;
   }
 }
-/* line 248, ../sass/style.scss */
+/* line 257, ../sass/style.scss */
 #controls .color-legend span.color {
   display: inline-block;
   margin-right: 5px;
@@ -327,12 +338,12 @@ form .rating {
   border-radius: 6px / 6px;
 }
 @media only screen and (max-width: 767px) {
-  /* line 248, ../sass/style.scss */
+  /* line 257, ../sass/style.scss */
   #controls .color-legend span.color {
     margin-right: 2px;
   }
 }
-/* line 258, ../sass/style.scss */
+/* line 267, ../sass/style.scss */
 #controls .color-legend span.group {
   font-size: 10px;
 }
