Adding some comments

--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -59,7 +59,7 @@
 						</select>
 						<colorlegend data-l-map="crudCtrl.categoryColors"></colorlegend>
 					</div>
-					<visualization id="my-visualization" data-v-width="{{vizCtrl.width}}" data-v-resize-action="vizCtrl.calcDimensions()" data-v-items="crudCtrl.filteredItems" data-v-props="crudCtrl.props" data-v-colormap="crudCtrl.categoryColors" data-v-dclick="crudCtrl.edit(id)" data-v-reset="crudCtrl.clearForm"></visualization>
+					<visualization id="my-visualization" data-v-width="{{vizCtrl.width}}" data-v-resize-action="vizCtrl.calcDimensions()" data-v-items="crudCtrl.filteredItems" data-v-props="crudCtrl.props" data-v-colormap="crudCtrl.categoryColors" data-v-dclick="crudCtrl.edit(id,true)" data-v-reset="crudCtrl.clearForm"></visualization>
 				</section>
 			</div>
 		</div>
